--- a/css/stye.css
+++ b/css/stye.css
@@ -102,3 +102,115 @@ body{
     background:#7E0707;
     color: #fff;
 }
+.adventages{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);    
+    margin-bottom: 50px;
+}
+.adventages-top__body{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
+.adventages__top{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    margin-bottom: 90px;
+}
+.adventages-btm__top{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+    margin-bottom: 50px;
+}
+.adventages-btm__star{
+    width: 20px;
+}
+.adventages-btm__text{
+    color: #0B3B3C;
+    font-size: 20px;
+    font-weight: 500;
+}
+.adventages-btm-text__primary{
+    color: #00B67A;
+}
+.adventages-btm__items{
+    display: flex;
+    justify-content: space-between;
+}
+.adventages__btm-item__img{
+    width: 300px;
+    height: 250px;
+    object-fit: cover;
+}
+.adventages-btm__item{
+    text-align: center;
+}
+.adventages-btm-item__title{
+    color: #0B3B3C;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+.adventages-btm-item__text{
+    color: #0B3B3C ;
+    line-height: 25px;
+    max-width: 300px;
+}
+.adventages__next__icon{
+    width: 80px;
+   margin: 50px 50% 20px 50%;
+}
+.about__items{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap:   10px ;
+}
+.about__item{
+    text-align: center;
+    background: #E8EFE9;
+    padding: 20px 40px;
+}
+.about__title{
+    margin-bottom: 40px;
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 60px;
+    letter-spacing: 1.2px;
+    color: #0B3B3C;
+    text-align: center;
+}
+.about-item__img{
+    width: 400px;
+}
+.about-item__title{
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    color: #0B3B3C;
+    margin-top: 10px;
+}
+.about-item__text{
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 29px;
+    color: #0B3B3C;
+    max-width: 470px;
+    width: 100%;
+    margin-bottom: 22px;
+}
+.about-item__btn{
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2.1px;
+    text-transform: uppercase;
+    color: #0B3B3C;
+    text-decoration: none;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #0B3B3C;;
+}
