--- a/css/stye.css
+++ b/css/stye.css
@@ -540,3 +540,81 @@ body{
     height: 2px;
     display: block;
 }
+.footer{
+    background: #0B3B3C;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+.footer__logo{
+    margin-bottom: 40px;
+}
+.footer__link{
+    font-size: 12px;
+    line-height: 22px;
+    letter-spacing: 0.72px;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.footer__links{
+    display: flex;
+    column-gap: 20px;
+    margin-bottom: 12px;
+}
+.footer__text{
+    font-size: 11px;
+    line-height: 22px;
+    letter-spacing: 0.72px;
+    color: #6D8A83;
+}
+.footer-text-1{
+    margin-bottom: 10px;
+}
+.footer__body{
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+}
+.footer-icon{
+    color: #fff;
+    font-size: 22px;
+    padding: 10px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    transition: 500ms ease;
+}
+.footer__icons{
+    display: flex;
+    column-gap: 15px;
+}
+.footer-icon-1{
+    padding: 10px 13px;
+}
+.footer-icon:hover{
+    background: #fff;
+    color: #0B3B3C;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
